--- a/app/pages/myInfo/myInfo.scss
+++ b/app/pages/myInfo/myInfo.scss
@@ -1,9 +1,9 @@
 .main-logo{
   width: 100%;
-  top: 45px;
+  top: .45rem;
   .logo-img{
-    width: .65rem;
-    height: .65rem;
+    width: .9rem;
+    height: .9rem;
     margin: .3rem auto;
     img{
       width: 100%;
@@ -12,29 +12,28 @@
 }
 
 .main-all>div{
-  width: 50%;
-  height: .21rem;
+  height: .4rem;
   margin: 40px auto;
   background: #FFFFFF;
   box-shadow: 0 2px 2px 0 rgba(234,234,234,0.50);
+  font-size: 14px;
 }
 .version{
-  text-indent: 30px;
+  text-indent: .2rem;
   font-size: 20px;
   color: #030303;
   letter-spacing: 0;
-  line-height: .21rem;
-
-    .version-num{
-      float: right;
-      margin-right: 15px;
-    }
+  line-height: .4rem;
+  .version-num{
+    float: right;
+    margin-right: .15rem;
+  }
 }
 
 .exitLogin{
-  text-indent: 30px;
-  font-size: 20px;
+  text-indent: .2rem;
   color: #030303;
   letter-spacing: 0;
-  line-height: .21rem;
+  line-height: .4rem;
+  font-famaly:'PingFangSC-Regular';
 }
