--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -10,7 +10,7 @@
 @import "../pages/dailywork/dailywork";
 @import "../pages/login/login";
 @import "../pages/application/application";
-@import "../pages/myInfo/myInfo";
+@import "../pages/personal/personal";
 @import "../pages/guide/guide";
 @import "../pages/menu/menu";
 
