--- a/app/pages/menu/menu.scss
+++ b/app/pages/menu/menu.scss
@@ -1,6 +1,5 @@
 
 html{
-  font-size:26.67vw;
   background: rgba(250,250,250,0.90);
   box-shadow: 0 0 0 0 #E3E3E3;
 }
@@ -8,11 +7,11 @@ body{
   background: #fff;
 }
 .left-title{
-  height: .34rem;
+  height: .6rem;
   overflow: hidden;
   .title-logo{
-    width: .76rem;
-    height: .156rem;
+    width: 1.75rem;
+    height: .4rem;
     margin: .1rem .15rem;
     img{
       width: 100%;
@@ -22,24 +21,20 @@ body{
 }
 .left-item{
   width: 100%;
-  height: .2rem;
+  height: .3rem;
+  line-height: .3rem;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
   color: #7c7c7c;
   letter-spacing: 0;
-  line-height: .2rem;
+  margin-top: .1rem;
+
 }
 .application{
-  background: url("../img/Application%20Center-selected.png") no-repeat .15rem .037rem;
-  background-size: .125rem;
+  background: url("../img/Application%20Center-selected.png") no-repeat .2rem 0;
+  background-size: .3rem;
 }
-.main{
-  background: url("../img/Personal%20Center-selected.png") no-repeat .15rem .037rem;
-  background-size: .125rem;
-}
-.function-title{
-  height: 24px;
-  line-height: 24px;
-  font-size: 16px;
-  color:#7C7C7C;
+.personal{
+  background: url("../img/Personal%20Center-selected.png") no-repeat .2rem 0;
+  background-size: .3rem;
 }
